--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -247,7 +247,7 @@ table.dataTable.fixedHeader-locked {
 .heroes-statslist-toolbar-rolebutton {
     background-color: #10042B;
     font-size: 12px !important;
-    margin: 2px;
+    margin: 6px 2px 2px 2px;
     padding: 3px 7px;
     cursor: pointer;
     border-color: #161923;
@@ -259,7 +259,7 @@ table.dataTable.fixedHeader-locked {
 .heroes-statslist-toolbar-subrolebutton {
     background-color: #1B0748;
     font-size: 12px !important;
-    margin: 2px;
+    margin: 6px 2px 2px 2px;
     padding: 3px 9px;
     cursor: pointer;
     border-color: #1A1624;
@@ -462,4 +462,87 @@ span.left {
 
 span.right {
     float: right;
+}
+
+/*
+ * Bootstrap Select And Filter Options
+ */
+/*
+Make bootstrap-select work with bootstrap 4 see:
+https://github.com/silviomoreto/bootstrap-select/issues/1135
+*/
+.dropdown-toggle.btn-default {
+    color: #ffffff !important;
+    background-color: #444652 !important;
+    border-color: #10042B!important;
+    height:50px;
+}
+.bootstrap-select.show > .dropdown-menu > .dropdown-menu {
+    display: block;
+}
+.bootstrap-select > .dropdown-menu > .dropdown-menu li.hidden {
+    display: none;
+}
+.bootstrap-select > .dropdown-menu > .dropdown-menu li a {
+    background-color: #201D26 !important;
+    display: inline-block;
+    width: 100%;
+    padding: 3px 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #FFFFFF;
+    text-align: inherit;
+    white-space: nowrap;
+    background: 0 0;
+    border: 0;
+    text-decoration: none;
+}
+.bootstrap-select > .dropdown-menu {
+    background-color: #201D26 !important;
+    border-color: #10042B!important;
+}
+.bootstrap-select > .dropdown-menu > .dropdown-menu li a:hover {
+    background-color: #566eff!important;
+    color:#FFFFFF!important;
+}
+.bootstrap-select > .dropdown-toggle {
+    width: 100%;
+}
+.bootstrap-select .check-mark {
+    line-height: 14px;
+}
+.bootstrap-select .check-mark::after {
+    font-family: "FontAwesome";
+    content: "\f00c";
+    color:#8782ff;
+}
+.bootstrap-select > .dropdown-menu > .dropdown-menu li a:hover .check-mark::after {
+    color:#FFFFFF!important;
+}
+.bootstrap-select button {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* Make filled out selects be the same size as empty selects */
+.bootstrap-select.btn-group .dropdown-toggle .filter-option {
+    display: inline !important;
+}
+
+.filter-dropdown-image {
+    margin-right: 4px;
+}
+
+.filter-button {
+    background-color: #10042B;
+    font-size: 12px !important;
+    margin: 2px 2px 5px 2px;
+    padding: 3px 7px;
+    cursor: pointer;
+    border-color: #161923;
+    border-style: outset;
+    border-radius: 4px;
+    color: #FFFFFF;
+    width:140px;
+    height:28px;
 }
