--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -31,7 +31,7 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" method="get" action="#">
-            <input class="form-control mr-sm-2" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
+            <input class="hotstatus-search-textbox" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
             <button id="nav-player-search-btn" class="btn my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
         </form>
     </div>
