Added default selection states to multiselect dropdowns that are decided by the array the controller passes along, also modified bootstrap select to always select all if there are 0 selections, and to always deselect all if there are > 0 selections, for the select toggle button

--- a/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/maps.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/maps.html.twig
@@ -2,7 +2,8 @@
         data-selected-text-format="count > 4" data-count-selected-text="{0} of {1} Maps Selected" data-multiple-separator=""
         data-select-all-text="<i class='fa fa-check-square-o fa-2x' style='' aria-hidden='true'></i>" multiple>
     {% for key, map in filter_maps %}
-        <option title="<img class='filter-dropdown-image-map' src='{{ asset('ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
+        <option {% if map.selected == true %}selected="selected"{% endif %}
+                title="<img class='filter-dropdown-image-map' src='{{ asset('ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
                 data-content="<img class='filter-dropdown-image-map filter-dropdown-image-margin-right-8' src='{{ asset('ui/map_icon_'~map.name_sort~'.png', 'images') }}'>{{ key }}">{{ key }}</option>
     {% endfor %}
 </select>
