--- a/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/ranks.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/ranks.html.twig
@@ -1,8 +1,9 @@
 <select class="selectpicker" data-actions-box="true" data-width="300px" title="No Ranks Selected"
         data-selected-text-format="values" data-multiple-separator=""
         data-select-all-text="<i class='fa fa-check-square-o fa-2x' style='' aria-hidden='true'></i>" multiple>
-    {% for rank in filter_ranks %}
-        <option title="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~rank~'.png', 'images') }}'>"
-                data-content="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~rank~'.png', 'images') }}'>{{ rank }}">{{ rank }}</option>
+    {% for key, rank in filter_ranks %}
+        <option {% if rank.selected == true %}selected="selected"{% endif %}
+                title="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~key~'.png', 'images') }}'>"
+                data-content="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~key~'.png', 'images') }}'>{{ key }}">{{ key }}</option>
     {% endfor %}
 </select>
