--- a/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/ranks.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/multiselect/ranks.html.twig
@@ -1,9 +1,10 @@
-<select class="selectpicker" data-actions-box="true" data-width="300px" title="No Ranks Selected"
+<select class="selectpicker filter-selector filter-selector-rank" data-actions-box="true" data-width="300px" title="No Ranks Selected"
         data-selected-text-format="values" data-multiple-separator=""
         data-select-all-text="<i class='fa fa-check-square-o fa-2x' style='' aria-hidden='true'></i>" multiple>
     {% for key, rank in filter_ranks %}
         <option {% if rank.selected == true %}selected="selected"{% endif %}
                 title="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~key~'.png', 'images') }}'>"
-                data-content="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~key~'.png', 'images') }}'>{{ key }}">{{ key }}</option>
+                data-content="<img class='filter-dropdown-image-rank filter-dropdown-image-margin-right-8' src='{{ asset('ui/ranked_icon_'~key~'.png', 'images') }}'>{{ key }}"
+                value="{{ key }}">{{ key }}</option>
     {% endfor %}
 </select>
