--- a/app/Resources/views/snippets/stdassets.html.twig
+++ b/app/Resources/views/snippets/stdassets.html.twig
@@ -12,6 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs4/dt-1.10.16/fh-3.1.3/r-2.2.0/datatables.min.js"></script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
     <script src="{{ asset('build/hotstatus-bootstrap-select.js') }}"></script>
     <script src="{{ asset('build/hotstatus.js') }}"></script>
 {% endblock %}
