--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -268,7 +268,7 @@ table.dataTable.fixedHeader-locked {
 .heroes-statslist-toolbar-rolebutton {
     background-color: #10042B;
     font-size: 12px !important;
-    margin: 6px 2px 2px 2px;
+    margin: 10px 2px 2px 2px;
     padding: 3px 7px;
     cursor: pointer;
     border-color: #161923;
@@ -279,7 +279,7 @@ table.dataTable.fixedHeader-locked {
 .heroes-statslist-toolbar-subrolebutton {
     background-color: #1B0748;
     font-size: 12px !important;
-    margin: 6px 2px 2px 2px;
+    margin: 10px 2px 2px 2px;
     padding: 3px 9px;
     cursor: pointer;
     border-color: #1A1624;
@@ -491,9 +491,9 @@ Make bootstrap-select work with bootstrap 4 see:
 https://github.com/silviomoreto/bootstrap-select/issues/1135
 */
 .dropdown-toggle.btn-default {
-    color: #ffffff !important;
-    background-color: #444652 !important;
-    border-color: #10042B!important;
+    color: #ffffff;
+    background-color: #444652;
+    border-color: #10042B;
     height:50px;
     line-height: 32px;
 }
@@ -592,6 +592,11 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     margin-right: 8px;
 }
 
+.filter-error {
+    border-color: #FF0000!important;
+    font-size: 24px;
+}
+
 .filter-button {
     background-color: #2c1057;
     font-size: 16px !important;
@@ -604,4 +609,12 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     color: #FFFFFF;
     width:140px;
     height:28px;
+}
+
+.filter-button[disabled] {
+    cursor: not-allowed;
+}
+
+.filter-button:active:enabled {
+    transform:scale(.9, .9);
 }
