Changed filter-error to only change font size for child filter option classes, while modifying the border color for the primary element

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -594,6 +594,9 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 
 .filter-error {
     border-color: #FF0000!important;
+}
+
+.filter-error .filter-option {
     font-size: 24px;
 }
 
