--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -51,23 +51,23 @@
         <div class="row">
             <div class="col-md-1 col-xl-2"></div>
             <div class="col-sm-12 col-md-10 col-xl-8">
-                <div class="text-center">
+                <div class="">
                     {% embed ':snippets:heroes/statslist.html.twig' %}
                         {% block javascripts %}{% endblock %}
                         {% block filter %}
                             <div>
                                 <div class="d-inline-block">
+                                    {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
+                                </div>
+                                <div class="d-inline-block">
                                     {% include ':snippets:heroes/filter/dropdown/multiselect/maps.html.twig' %}
                                 </div>
-                                {#<div class="d-inline-block">
-                                    {% include ':snippets:heroes/filter/dropdown/multiselect/maps.html.twig' %}
-                                </div>#}
                                 <div class="d-inline-block">
                                     {% include ':snippets:heroes/filter/dropdown/multiselect/ranks.html.twig' %}
                                 </div>
-                                {#<div class="d-inline-block">
-                                    {% include ':snippets:heroes/filter/dropdown/multiselect/maps.html.twig' %}
-                                </div>#}
+                                <div class="d-inline-block">
+                                    {% include ':snippets:heroes/filter/dropdown/select/dates.html.twig' %}
+                                </div>
                             </div>
                         {% endblock %}
                         {% block filterbutton %}
