--- a/app/Resources/views/default/heroes.html.twig
+++ b/app/Resources/views/default/heroes.html.twig
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-md-1 col-xl-2"></div>
             <div class="col-sm-12 col-md-10 col-xl-8">
-                <div class="">
+                <div>
                     {% embed ':snippets:heroes/statslist.html.twig' %}
                         {% block javascripts %}{% endblock %}
                         {% block filter %}
