--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -163,7 +163,7 @@ body {
     overflow: auto;
     overflow-wrap: normal;
 }
-.footer a:visited, a:link, a:active {
+.footer a:visited, .footer a:link, .footer a:active {
     color: #c6c4db;
     text-decoration: none;
 }
@@ -182,6 +182,15 @@ body {
 }
 .footer-sep {
     color: rgba(255,255,255,0.2);
+}
+
+/* General Page styling */
+.hotstatus-container {
+    background-color: rgba(46, 57, 59, 0.81);
+    border: 2px;
+    border-color: #1B0748;
+    border-style: solid;
+    border-radius: 4px;
 }
 
 /* Statlist styling */
@@ -285,6 +294,23 @@ table.dataTable.fixedHeader-locked {
     border-color: #1A1624;
     border-radius: 4px;
     color: #FFFFFF;
+}
+
+.hsl-link:link {
+    color: #FFFFFF !important;
+}
+
+.hsl-link:visited {
+    color: #FFFFFF !important;
+}
+
+.hsl-link:hover {
+    color: #8782ff !important;
+    text-decoration: none;
+}
+
+.hsl-link:active {
+    color: #FFFFFF !important;
 }
 
 .hsl-number-delta-red {
