--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -2,6 +2,7 @@
 
 {# Include snippets and then alias their blocks so as to order them as needed #}
 {% use ':snippets:stdassets.html.twig' with javascripts as stdjavascripts, stylesheets as stdstylesheets %}
+{% use ':snippets:heroes/heroloader.html.twig' with javascripts as heroloaderjavascripts %}
 
 {# Append to title #}
 {% block title %}
@@ -29,11 +30,20 @@
         <div class="row">
             <div class="col-md-1 col-xl-2"></div>
             <div class="col-sm-12 col-md-10 col-xl-8">
-                <div class="hotstatus-container">
-                    <div>
-
-                    </div>
-                </div>
+                {% embed ':snippets:heroes/heroloader.html.twig' %}
+                    {% block javascripts %}{% endblock %}
+                    {% block filter %}
+                        <div>
+                            {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
+                            {% include ':snippets:heroes/filter/dropdown/multiselect/maps.html.twig' %}
+                            {% include ':snippets:heroes/filter/dropdown/multiselect/ranks.html.twig' %}
+                            {% include ':snippets:heroes/filter/dropdown/select/dates.html.twig' %}
+                        </div>
+                    {% endblock %}
+                    {% block filterbutton %}
+                        <button class="btn btn-sm filter-button">Filter</button>
+                    {% endblock %}
+                {% endembed %}
             </div>
             <div class="col-md-1 col-xl-2">
                 {% include ':snippets:advertising/responsive_vertical.html.twig' %}
@@ -50,5 +60,6 @@
 {# Javascript #}
 {% block javascripts %}
     {{ block('stdjavascripts') }}
+    {{ block('heroloaderjavascripts') }}
 {% endblock %}
 
