Further fleshed out hero page, added talents routing to default hero page, modified filter sizes to better fill a layout on multiple staple widths

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -3,9 +3,36 @@
 {% endblock %}
 
 <div class="hotstatus-container">
-    {% block filter %}{% endblock %}
-    {% block filterbutton %}{% endblock %}
     <div>
-        Testing123
+        {% block filter %}{% endblock %}
+    </div>
+    <div class="heroloader-flex-container">
+        <div class="heroloader-container heroloader-container-stats">
+            Raw Stats
+        </div>
+        <div class="heroloader-container heroloader-container-talents">
+            Talents
+
+            <div>
+                Talent Builds
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="heroloader-flex-container">
+            <div class="heroloader-container heroloader-container-graphs">
+                Horizontally Layed out Graphs
+            </div>
+        </div>
+        <div class="heroloader-flex-container">
+            <div class="heroloader-container heroloader-container-matchup-foes">
+                Data Table Foes Matchup
+            </div>
+        </div>
+        <div class="heroloader-flex-container">
+            <div class="heroloader-container heroloader-container-matchup-friends">
+                Data Table Friends Matchup
+            </div>
+        </div>
     </div>
 </div>
