--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -13,7 +13,7 @@
                 <a class="nav-link nav-stopwordwrap {{ route == 'heroes' ? 'active' }}" href="{{ path('heroes') }}">Heroes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-stopwordwrap {{ route == 'talents' ? 'active' }}" href="{{ path('talents') }}">Talents</a>
+                <a class="nav-link nav-stopwordwrap {{ (route == 'hero') ? 'active' }}" href="{{ path('talents') }}">Talents</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link nav-stopwordwrap {{ route == 'rankings' ? 'active' }}" href="{{ path('rankings') }}">Rankings</a>
