--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -34,14 +34,15 @@
                     {% block javascripts %}{% endblock %}
                     {% block filter %}
                         <div>
+                            {% include ':snippets:heroes/filter/dropdown/select/heroes.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/multiselect/maps.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/multiselect/ranks.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/select/dates.html.twig' %}
                         </div>
-                    {% endblock %}
-                    {% block filterbutton %}
-                        <button class="btn btn-sm filter-button">Filter</button>
+                        <div>
+                            <button class="btn btn-sm filter-button filter-button-hero-loader">Filter</button>
+                        </div>
                     {% endblock %}
                 {% endembed %}
             </div>
