Established ajax request technique for hero-loader, began fleshing out hero pagedata controller action

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -1,5 +1,5 @@
 {% block javascripts %}
-    {#<script src="{{ asset('build/hero-loader.js') }}"></script>#}
+    <script src="{{ asset('build/hero-loader.js') }}"></script>
 {% endblock %}
 
 <div class="hotstatus-container">
