Implemented bootstrap sized padding styles for left and right to properly layout different hero data containers, further refined design for hero page

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-4 col-md-3 col-lg-3 heroloader-container-stats bg-success">
+        <div class="col-sm-4 col-md-3 col-lg-3 padding-sm-right-0 heroloader-container-herodata">
             <div class="row">
                 <div class="col">
                     <div class="row">
@@ -19,12 +19,12 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div id="hl-herodata-title" class="dev-row-a">{TITLE}</div>
+                            <div id="hl-herodata-name" class="dev-row-b">{NAME}</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div id="hl-herodata-name" class="dev-row-b">{NAME}</div>
+                            <div id="hl-herodata-title" class="dev-row-a">{TITLE}</div>
                         </div>
                     </div>
                     <div class="row">
@@ -37,38 +37,10 @@
                             <div id="hl-herodata-desc-bio" class="dev-row-b">{BIO}</div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="dev-row-a">
-                                        <div class="d-inline-block">
-                                            Kills:
-                                        </div>
-                                        <div class="d-inline-block">
-                                            {AVG KILLS} ({KILLS/M})
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="dev-row-b">
-                                        <div class="d-inline-block">
-                                            Assists:
-                                        </div>
-                                        <div class="d-inline-block">
-                                            {AVG ASSISTS} ({ASSISTS/M})
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-8 col-md-9 col-lg-9 heroloader-container-talents bg-info">
+        <div class="col-sm-8 col-md-7 col-lg-7 padding-sm-left-0 padding-md-right-0 heroloader-container-talents">
             <div class="row">
                 <div class="col">
                     <div class="row">
@@ -79,6 +51,36 @@
                     <div class="row">
                         <div class="col">
                             <div class="dev-row-b">Talent Builds</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 col-lg-2 padding-md-left-0 heroloader-container-stats">
+            <div class="row">
+                <div class="col">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dev-row-a">
+                                <div class="d-inline-block">
+                                    Kills:
+                                </div>
+                                <div class="d-inline-block">
+                                    {AVG KILLS} ({KILLS/M})
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="dev-row-b">
+                                <div class="d-inline-block">
+                                    Assists:
+                                </div>
+                                <div class="d-inline-block">
+                                    {AVG ASSISTS} ({ASSISTS/M})
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
